# aivectormemory

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.codex/: config.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
.opencode/plugins/: aivectormemory-auto-save.js
aivectormemory/: __init__.py  __main__.py  config.py  errors.py  install.py  log.py  protocol.py  regenerate.py  scoring.py  server.py  settings.py  summarizer.py  utils.py
aivectormemory/db/: base.py  cleanup.py  connection.py  graph_repo.py  issue_repo.py  memory_repo.py  schema.py  task_repo.py  user_memory_repo.py
aivectormemory/db/migrations/: __init__.py  v11.py  v12.py  v13.py  v14.py  v15.py
aivectormemory/embedding/: engine.py
aivectormemory/hooks/: _common.py  _messages.py  bash_guard.py  bash_guard.sh  check_track.py  check_track.sh  stop_guard.py  stop_guard.sh
aivectormemory/i18n/: __init__.py
aivectormemory/i18n/rules/: __init__.py  de.py  en.py  es.py  fr.py  ja.py  zh_CN.py  zh_TW.py
aivectormemory/tools/: __init__.py  auto_save.py  forget.py  graph.py  keywords.py  readme.py  recall.py  remember.py  status.py  task.py  track.py
aivectormemory/web/: api.py  app.py
aivectormemory/web/routes/: graph.py  issues.py  memories.py  projects.py  tags.py  tasks.py
aivectormemory/web/static/: app.js  i18n.js  index.html  style.css
design-system/aivectormemory/: MASTER.md
design-system/aivectormemory/pages/: landing.md
desktop/: app.go
desktop/frontend/src/components/layout/: Sidebar.vue
desktop/frontend/src/components/tasks/: TaskGroup.vue  TaskNode.vue
desktop/frontend/src/composables/: useIssues.ts
desktop/frontend/src/i18n/: de.ts  en.ts  es.ts  fr.ts  ja.ts  zh-CN.ts  zh-TW.ts
desktop/frontend/src/views/: IssuesView.vue  MemoriesView.vue  ProjectSelect.vue  SettingsView.vue
desktop/frontend/wailsjs/go/main/: App.d.ts  App.js
desktop/internal/db/: connection.go  db_test.go  health.go  issues.go  memories.go  projects.go  tasks.go
desktop/internal/embedding/: engine.go  repair.go
desktop/internal/settings/: manager.go
desktop/internal/webserver/: launcher.go
docs/: README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.zh-CN.md  README.zh-TW.md
docs/specs/ci-release-workflow/: tasks.md
docs/specs/code-quality-audit/: design.md  requirements.md  tasks.md
docs/specs/language-settings/: design.md  requirements.md  tasks.md
scripts/: sync-readme.sh
tests/: test_i18n.py  test_settings.py
website/: docs  index.html
