[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aivectormemory"
version = "1.0.15"
description = "轻量级 MCP Server，为 AI 编程助手提供跨会话持久记忆能力"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "AIVectorMemory Contributors" }]
keywords = ["mcp", "memory", "ai", "llm", "sqlite", "embedding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "sqlite-vec>=0.1.0",
    "onnxruntime>=1.16",
    "tokenizers>=0.15",
    "huggingface-hub>=0.20",
    "numpy>=1.24",
    "jieba>=0.42",
]

[project.scripts]
run = "aivectormemory.__main__:main"

[project.urls]
Homepage = "https://github.com/Edlineas/aivectormemory"
Repository = "https://github.com/Edlineas/aivectormemory"

[tool.hatch.build.targets.wheel]
packages = ["aivectormemory"]

[tool.hatch.build.targets.sdist]
include = ["aivectormemory/", "scripts/", "README.md", "LICENSE", "NOTICE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
